continue refactoring the pmm

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -79,7 +79,7 @@
                 "-smp",
                 "1",
                 "-append",
-                "init=/programs/locks-bench",
+                "init=/tests/fork-test",
             ],
             "problemMatcher": [ ],
             "group": "none",
