--- a/userspace/programs/my_mutex/CMakeLists.txt
+++ b/userspace/programs/my_mutex/CMakeLists.txt
@@ -5,5 +5,5 @@ add_executable(my_mutex
     ../console-helpers.c
 )
 
-setup_userspace_program(my_mutex /programs "My own mutex implementation using futexes")
+setup_userspace_program(my_mutex /programs "My own mutex implementation")
 target_link_libraries(my_mutex PRIVATE rpc)
