init: move initrd mountpoint to /initrd

--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -15,7 +15,7 @@
 
 ## Device Manager configuration
 ## path, and args to the device manager executable
-device_manager.path = /programs/device-manager
+device_manager.path = /initrd/programs/device-manager
 ## device_manager.args =
 
 ## Drivers configuration
@@ -40,4 +40,4 @@ driver = /drivers/x86_console_driver
 ## Note that the initrd is always mounted as the root filesystem, and
 ## it's always read-only.
 ##
-mount = none /tmp tmpfs defaults
+mount = none /ipc ipcfs defaults
