vfs: fix invalid dir opening, simplify vfs APIs

--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -24,8 +24,12 @@ device_manager.path = /initrd/programs/device-manager
 driver = /drivers/x86_console_driver
 
 ## Filesystems configuration
+## The directories are created in the order they are specified in the file.
+mkdir = /ipc
+
+## Mount configuration
 ##
-## The filesystems are mounted in the order they are specified in the file.
+## The mountpoints are mounted in the order they are specified in the file.
 ##
 ## Format:
 ##     mount = <Device> <MountPoint> <Filesystem> <Options>
