--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -79,7 +79,7 @@
                 "-smp",
                 "1",
                 "-append",
-                "kmsg_console=serial init=/initrd/tests/fork-test",
+                "init=/initrd/programs/init",
             ],
             "problemMatcher": [ ],
             "group": "none",
