--- a/userspace/programs/device-manager/CMakeLists.txt
+++ b/userspace/programs/device-manager/CMakeLists.txt
@@ -2,4 +2,4 @@
 
 add_executable(device-manager main.c)
 setup_userspace_program(device-manager /programs "The device manager daemon")
-target_link_libraries(device-manager PRIVATE rpc)
+target_link_libraries(device-manager PRIVATE mos::librpc-server)
