--- a/userspace/programs/locks-bench/CMakeLists.txt
+++ b/userspace/programs/locks-bench/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(locks-bench
 )
 
 setup_userspace_program(locks-bench /programs "Benchmarking different locks")
-target_link_libraries(locks-bench PRIVATE rpc)
+target_link_libraries(locks-bench PRIVATE mos::private_include mos::librpc-client)
