--- a/userspace/drivers/x86_text_console/CMakeLists.txt
+++ b/userspace/drivers/x86_text_console/CMakeLists.txt
@@ -5,5 +5,5 @@ if (NOT MOS_ARCH STREQUAL "x86")
 endif()
 
 add_executable(x86_console_driver main.c text_mode_console.c)
-target_link_libraries(x86_console_driver PRIVATE rpc)
+target_link_libraries(x86_console_driver PRIVATE mos::private_include mos::librpc-server)
 setup_userspace_program(x86_console_driver /drivers "x86 console userspace driver")
