--- a/userspace/programs/my_mutex/CMakeLists.txt
+++ b/userspace/programs/my_mutex/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(my_mutex
 )
 
 setup_userspace_program(my_mutex /programs "My own mutex implementation")
-target_link_libraries(my_mutex PRIVATE rpc)
+target_link_libraries(my_mutex PRIVATE mos::librpc-client)
