--- a/userspace/programs/my_mutex/CMakeLists.txt
+++ b/userspace/programs/my_mutex/CMakeLists.txt
@@ -1,9 +1,6 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-add_executable(my_mutex
-    main.c
-    ../console-helpers.c
-)
+add_executable(my_mutex main.c)
 
 setup_userspace_program(my_mutex /programs "My own mutex implementation")
-target_link_libraries(my_mutex PRIVATE mos::librpc-client)
+target_link_libraries(my_mutex PRIVATE x86_console-client)
