--- a/userspace/programs/locks-bench/CMakeLists.txt
+++ b/userspace/programs/locks-bench/CMakeLists.txt
@@ -1,9 +1,6 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-add_executable(locks-bench
-    main.c
-    ../console-helpers.c
-)
+add_executable(locks-bench main.c)
 
 setup_userspace_program(locks-bench /programs "Benchmarking different locks")
-target_link_libraries(locks-bench PRIVATE mos::private_include mos::librpc-client)
+target_link_libraries(locks-bench PRIVATE x86_console-client mos::private_include)
