init: use libargparse

--- a/userspace/programs/init/CMakeLists.txt
+++ b/userspace/programs/init/CMakeLists.txt
@@ -2,4 +2,4 @@
 
 add_executable(init main.c parser.c)
 setup_userspace_program(init /programs "The init program")
-target_link_libraries(init PRIVATE mos::librpc-server)
+target_link_libraries(init PRIVATE mos::argparse)
