--- a/userspace/programs/CMakeLists.txt
+++ b/userspace/programs/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(device-manager)
 add_subdirectory(my_mutex)
 add_subdirectory(locks-bench)
 add_subdirectory(syscall_demo)
+add_subdirectory(mossh)
