userspace: core-utils -> lazybox

--- a/userspace/programs/CMakeLists.txt
+++ b/userspace/programs/CMakeLists.txt
@@ -1,7 +1,7 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 add_subdirectory(init)
-add_subdirectory(core-utils)
+add_subdirectory(lazybox)
 add_subdirectory(device-manager)
 add_subdirectory(my_mutex)
 add_subdirectory(locks-bench)
