lazybox: add stat

--- a/userspace/programs/lazybox/CMakeLists.txt
+++ b/userspace/programs/lazybox/CMakeLists.txt
@@ -10,5 +10,6 @@ lazybox_program(cat "Concatenate files and print on the standard output")
 lazybox_program(ls "List directory contents")
 lazybox_program(mkdir "Create directories")
 lazybox_program(shutdown "Shutdown the system")
+lazybox_program(stat "Display file or file system status")
 lazybox_program(touch "Change file timestamps")
 lazybox_program(tree "List contents of directories in a tree-like format")
