lazybox: true and false

--- a/userspace/programs/lazybox/CMakeLists.txt
+++ b/userspace/programs/lazybox/CMakeLists.txt
@@ -7,9 +7,11 @@ macro(lazybox_program name description)
 endmacro()
 
 lazybox_program(cat "Concatenate files and print on the standard output")
+lazybox_program(false "Do nothing, unsuccessfully")
 lazybox_program(ls "List directory contents")
 lazybox_program(mkdir "Create directories")
 lazybox_program(shutdown "Shutdown the system")
 lazybox_program(stat "Display file or file system status")
 lazybox_program(touch "Change file timestamps")
 lazybox_program(tree "List contents of directories in a tree-like format")
+lazybox_program(true "Do nothing, successfully")
