--- a/userspace/libs/readline/CMakeLists.txt
+++ b/userspace/libs/readline/CMakeLists.txt
@@ -5,6 +5,6 @@ add_library(readline
 )
 
 target_include_directories(readline PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
-target_link_libraries(readline PUBLIC mos::libuserspace)
+target_link_libraries(readline PUBLIC mos::stdlib)
 
 add_library(mos::readline ALIAS readline)
