--- a/userspace/programs/CMakeLists.txt
+++ b/userspace/programs/CMakeLists.txt
@@ -6,3 +6,5 @@ add_subdirectory(device-manager)
 add_subdirectory(my_mutex)
 add_subdirectory(locks-bench)
 add_subdirectory(mossh)
+
+add_subdirectory(2048)
