--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -1,3 +1,4 @@
+########################################################################################
 ## MOS init configurations
 ##
 ## CONFIGURATION FILE SYNTAX:
@@ -10,18 +11,20 @@
 ## Comments can be placed anywhere in the file, except inside a key-value pair.
 ##
 ## If a key is specified multiple times, it's considered an array, however the
-## behavior depends on the key, for example, an 'arg' key is supposed to be an
-## array but a 'path' key is not.
+## behavior depends on the semantics of the key. For example, the 'driver' key
+## is an array, but the 'device_manager.path' key is not.
+########################################################################################
 
 ## Device Manager configuration
 ## path, and args to the device manager executable
 device_manager.path = /initrd/programs/device-manager
-## device_manager.args =
+# device_manager.args =
 
 ## Drivers configuration
 ## The drivers are loaded in the order they are specified in the file.
 ## The drivers listed below are always loaded regardless of the platform support.
 driver = /initrd/drivers/x86_console_driver
+driver = /initrd/drivers/pci_daemon
 
 ## Filesystems configuration
 ## The directories are created in the order they are specified in the file.
@@ -41,7 +44,7 @@ mkdir = /ipc
 ## Filesystem: the filesystem type, can be a filesystem name
 ## Options:    the mount options, this is filesystem specific
 ##
-## Note that the initrd is always mounted as the root filesystem, and
-## it's always read-only.
+## Note that the initrd is always mounted in `/initrd`, and it's always read-only.
+## This is done by the kernel, and cannot be changed in this file.
 ##
 mount = none /ipc ipcfs defaults
