--- a/userspace/programs/my_mutex/CMakeLists.txt
+++ b/userspace/programs/my_mutex/CMakeLists.txt
@@ -3,4 +3,4 @@
 add_executable(my_mutex main.c)
 
 setup_userspace_program(my_mutex /programs "My own mutex implementation")
-target_link_libraries(my_mutex PRIVATE x86_console-client)
+target_link_libraries(my_mutex PRIVATE x86-console::client)
