readline: CMake cleanup

--- a/userspace/libs/readline/CMakeLists.txt
+++ b/userspace/libs/readline/CMakeLists.txt
@@ -1,10 +1,6 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-add_library(readline
-    libreadline.c
-)
-
-target_include_directories(readline PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
+add_library(readline libreadline.c)
+target_include_directories(readline PUBLIC SYSTEM ${CMAKE_CURRENT_LIST_DIR}/include)
 target_link_libraries(readline PUBLIC mos::stdlib)
-
 add_library(mos::readline ALIAS readline)
