userspace: add a console hello world

--- a/userspace/programs/CMakeLists.txt
+++ b/userspace/programs/CMakeLists.txt
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
+add_subdirectory(hello)
 add_subdirectory(init)
 add_subdirectory(lazybox)
 add_subdirectory(my_mutex)
