dm: do not autostart the pci_daemon

--- a/userspace/initrd/config/dm.conf
+++ b/userspace/initrd/config/dm.conf
@@ -9,7 +9,7 @@
 ## The drivers are loaded in the order they are specified in the file.
 ## The drivers listed below are always loaded regardless of the platform support.
 load = /initrd/drivers/x86_console_driver
-load = /initrd/drivers/pci_daemon
+# load = /initrd/drivers/pci_daemon
 
 ## Device - Driver mapping
 ## The device driver mapping is specified in the following format:
