cmdline: refactor cmdline parser, add __early_setup

--- a/libs/stdlib/CMakeLists.txt
+++ b/libs/stdlib/CMakeLists.txt
@@ -10,6 +10,7 @@ add_mos_library(
         stdio_impl.c
         stdlib.c
         string.c
+        cmdline.c
         structures/bitmap.c
         structures/hashmap.c
         structures/hashmap_common.c
