--- a/arch/x86_64/CMakeLists.txt
+++ b/arch/x86_64/CMakeLists.txt
@@ -5,7 +5,8 @@ include(${CMAKE_CURRENT_LIST_DIR}/boot/uefi/bootable.cmake)
 add_kernel_source(
     INCLUDE_DIRECTORIES
     ${CMAKE_CURRENT_LIST_DIR}/include
-    RELATIVE_SOURCES
-    x86_64_platform.c
-    x86_64_platform_api.c
+
+    SOURCES
+        x86_64_platform.c
+        x86_64_platform_api.c
 )
